cleaned up prop chain for userAchievementsContainer/fixed footerLinks not aligning properly

--- a/src/UI/buttons/buttonStyles/footerLink.css
+++ b/src/UI/buttons/buttonStyles/footerLink.css
@@ -7,6 +7,7 @@
 .footer_link {
   -webkit-appearance: none;
   display: flex;
+  justify-content: center;
   background: rgba(50, 50, 50, 1);
   border: 0px solid black;
   box-sizing: border-box;
